--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+vou mandar a imagem para você, mas antes analise o ultimo código que fizemos alteração ele esta estável.
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
