--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Mentoria NasdaqPro</title>
+<title>Dashboard NASDAQ PRO</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
@@ -16,13 +16,20 @@
  --green:#22c55e;
  --red:#ef4444;
  --yellow:#facc15;
+ --blue:#93c5fd;
 }
-*{box-sizing:border-box;font-family:Inter,system-ui}
+
+*{
+ box-sizing:border-box;
+ font-family:Inter,system-ui,-apple-system,BlinkMacSystemFont;
+}
+
 body{
  margin:0;
  background:radial-gradient(circle at top,#0b1f4d,#020617 70%);
  color:var(--text);
 }
+
 .container{
  max-width:1600px;
  margin:auto;
@@ -32,12 +39,23 @@ body{
 /* HEADER */
 .header{
  display:flex;
- align-items:center;
- margin-bottom:26px;
+ flex-direction:column;
+ align-items:flex-start;
+ gap:6px;
+ margin-bottom:24px;
 }
+
 .header img{
- height:46px;
+ height:48px;
  max-width:100%;
+}
+
+.dashboard-title{
+ font-size:14px;
+ letter-spacing:2px;
+ font-weight:700;
+ color:var(--blue);
+ opacity:.9;
 }
 
 /* FILTROS */
@@ -45,17 +63,19 @@ body{
  display:flex;
  gap:12px;
  margin-bottom:24px;
- flex-wrap:wrap
+ flex-wrap:wrap;
 }
+
 select{
  background:var(--card);
  color:var(--text);
  border:1px solid var(--border);
- border-radius:12px;
+ border-radius:14px;
  padding:12px 16px;
  font-size:15px;
  width:220px;
 }
+
 select:disabled{opacity:.5}
 
 /* KPIs */
@@ -65,21 +85,24 @@ select:disabled{opacity:.5}
  gap:16px;
  margin-bottom:28px;
 }
+
 .kpi{
- background:var(--card);
+ background:linear-gradient(180deg,#050b1a,#030818);
  border:1px solid var(--border);
  border-radius:18px;
  padding:18px;
 }
+
 .kpi span{
  color:var(--muted);
- font-size:14px;
- text-transform:uppercase
+ font-size:13px;
+ text-transform:uppercase;
 }
+
 .kpi strong{
  display:block;
  margin-top:8px;
- font-size:28px
+ font-size:28px;
 }
 
 /* GRÁFICOS */
@@ -89,8 +112,9 @@ select:disabled{opacity:.5}
  gap:16px;
  margin-bottom:24px;
 }
+
 .card{
- background:var(--card);
+ background:linear-gradient(180deg,#050b1a,#030818);
  border:1px solid var(--border);
  border-radius:22px;
  padding:18px;
@@ -98,58 +122,70 @@ select:disabled{opacity:.5}
  display:flex;
  flex-direction:column;
 }
+
 .card strong{
  margin-bottom:12px;
- font-size:18px
+ font-size:18px;
 }
+
 .chart-wrap{
  flex:1;
- position:relative
+ position:relative;
 }
+
 canvas{
  width:100%!important;
- height:100%!important
+ height:100%!important;
 }
 
 /* TABELA */
-.table-wrap{overflow-x:auto}
+.table-wrap{
+ overflow-x:auto;
+}
+
 table{
  width:100%;
  min-width:900px;
- border-collapse:collapse
+ border-collapse:collapse;
 }
+
 thead{
- background:linear-gradient(180deg,#020b2a,#020617)
+ background:linear-gradient(180deg,#020b2a,#020617);
 }
+
 th{
- color:#93c5fd;
+ color:var(--blue);
  font-weight:700;
- font-size:18px;
+ font-size:17px;
  padding:18px 12px;
- text-align:center
+ text-align:center;
 }
+
 td{
  padding:15px 12px;
  border-bottom:1px solid var(--border);
- font-size:16px;
- text-align:center
+ font-size:15px;
+ text-align:center;
 }
+
 thead th:first-child,
 tbody td:first-child{
  text-align:left;
- padding-left:18px
-}
-tr.total{
- background:rgba(34,197,94,.08);
- font-weight:700
+ padding-left:18px;
 }
 
+tr.total{
+ background:rgba(34,197,94,.08);
+ font-weight:700;
+}
+
+/* RESPONSIVO */
 @media(max-width:900px){
  .cards{grid-template-columns:1fr}
 }
+
 @media(max-width:600px){
  select{width:100%}
- .header img{height:38px}
 }
 </style>
 </head>
@@ -157,65 +193,62 @@ tr.total{
 <body>
 <div class="container">
 
- <!-- LOGO -->
- <div class="header">
-  <img src="logo.png" alt="Mentoria NasdaqPro">
- </div>
+<!-- HEADER -->
+<div class="header">
+ <img src="logo.png" alt="Mentoria NasdaqPro">
+ <span class="dashboard-title">DASHBOARD</span>
+</div>
 
- <!-- FILTROS -->
- <div class="filters">
-  <select id="filtroAno"></select>
-  <select id="filtroMes"></select>
-  <select id="filtroSemana"></select>
- </div>
+<!-- FILTROS -->
+<div class="filters">
+ <select id="filtroAno"></select>
+ <select id="filtroMes"></select>
+ <select id="filtroSemana"></select>
+</div>
 
- <!-- KPIs -->
- <div class="kpis">
-  <div class="kpi"><span>Trades</span><strong id="kTrades">0</strong></div>
-  <div class="kpi"><span>Pontos</span><strong id="kPontos">0</strong></div>
-  <div class="kpi"><span>Gains</span><strong id="kGains" style="color:var(--green)">0</strong></div>
-  <div class="kpi"><span>Stops</span><strong id="kStops" style="color:var(--red)">0</strong></div>
-  <div class="kpi"><span>0x0</span><strong id="kZero" style="color:var(--yellow)">0</strong></div>
-  <div class="kpi"><span>Assertividade</span><strong id="kAcc">0%</strong></div>
- </div>
+<!-- KPIs -->
+<div class="kpis">
+ <div class="kpi"><span>Trades</span><strong id="kTrades">0</strong></div>
+ <div class="kpi"><span>Pontos</span><strong id="kPontos">0</strong></div>
+ <div class="kpi"><span>Gains</span><strong id="kGains" style="color:var(--green)">0</strong></div>
+ <div class="kpi"><span>Stops</span><strong id="kStops" style="color:var(--red)">0</strong></div>
+ <div class="kpi"><span>0x0</span><strong id="kZero" style="color:var(--yellow)">0</strong></div>
+ <div class="kpi"><span>Assertividade</span><strong id="kAcc">0%</strong></div>
+</div>
 
- <!-- GRÁFICOS -->
- <div class="cards">
-  <div class="card">
-   <strong>📈 Balanço de Pontos</strong>
-   <div class="chart-wrap">
-    <canvas id="chartLinha"></canvas>
-   </div>
-  </div>
-  <div class="card">
-   <strong>📊 Gains x Stops x 0x0</strong>
-   <div class="chart-wrap">
-    <canvas id="chartBar"></canvas>
-   </div>
-  </div>
+<!-- GRÁFICOS -->
+<div class="cards">
+ <div class="card">
+  <strong>📈 Balanço de Pontos</strong>
+  <div class="chart-wrap"><canvas id="chartLinha"></canvas></div>
  </div>
+ <div class="card">
+  <strong>📊 Gains x Stops x 0x0</strong>
+  <div class="chart-wrap"><canvas id="chartBar"></canvas></div>
+ </div>
+</div>
 
- <!-- TABELA -->
- <div class="card" style="height:auto">
-  <h3>Tabela Operacional</h3>
-  <div class="table-wrap">
-   <table>
-    <thead>
-     <tr>
-      <th>Dia</th>
-      <th>Pontos</th>
-      <th>Trades</th>
-      <th>Gain</th>
-      <th>Stop</th>
-      <th>0x0</th>
-      <th>Ativo</th>
-      <th>Semana</th>
-     </tr>
-    </thead>
-    <tbody id="tbody"></tbody>
-   </table>
-  </div>
+<!-- TABELA -->
+<div class="card" style="height:auto">
+ <strong>Tabela Operacional</strong>
+ <div class="table-wrap">
+  <table>
+   <thead>
+    <tr>
+     <th>Dia</th>
+     <th>Pontos</th>
+     <th>Trades</th>
+     <th>Gain</th>
+     <th>Stop</th>
+     <th>0x0</th>
+     <th>Ativo</th>
+     <th>Semana</th>
+    </tr>
+   </thead>
+   <tbody id="tbody"></tbody>
+  </table>
  </div>
+</div>
 
 </div>
 
@@ -260,14 +293,18 @@ function parseCSV(t){
 function initFiltros(){
  const anos=[...new Set(data.map(d=>d.ano))].sort();
  filtroAno.innerHTML=anos.map(a=>`<option>${a}</option>`).join("");
+ filtroAno.value=new Date().getFullYear();
  filtroAno.onchange=()=>{initMeses();atualizar();}
  initMeses();
 }
 
 function initMeses(){
- const meses=[...new Set(data.filter(d=>d.ano===filtroAno.value).map(d=>d.mes))];
+ const hoje=new Date();
+ const mesAtual=String(hoje.getMonth()+1).padStart(2,"0");
+ const meses=[...new Set(data.filter(d=>d.ano==filtroAno.value).map(d=>d.mes))];
  filtroMes.innerHTML=`<option value="ALL">Todos os meses</option>`+
  meses.map(m=>`<option value="${m}">${nomesMeses[m]}</option>`).join("");
+ filtroMes.value=meses.includes(mesAtual)?mesAtual:"ALL";
  filtroMes.onchange=()=>{initSemanas();atualizar();}
  initSemanas();
 }
@@ -280,21 +317,19 @@ function initSemanas(){
   return;
  }
  filtroSemana.disabled=false;
- const semanas=[...new Set(
-  data.filter(d=>d.ano===filtroAno.value && d.mes===filtroMes.value)
-      .map(d=>d.semana)
- )];
+ const semanas=[...new Set(data.filter(d=>d.ano==filtroAno.value && d.mes==filtroMes.value).map(d=>d.semana))];
  filtroSemana.innerHTML='<option value="ALL">Todas as semanas</option>'+
  semanas.map(s=>`<option>${s}</option>`).join("");
+ filtroSemana.value="ALL";
  filtroSemana.onchange=atualizar;
  atualizar();
 }
 
 function atualizar(){
  const f=data.filter(d=>
-  d.ano===filtroAno.value &&
-  (filtroMes.value==="ALL"||d.mes===filtroMes.value) &&
-  (filtroSemana.value==="ALL"||d.semana===filtroSemana.value)
+  d.ano==filtroAno.value &&
+  (filtroMes.value==="ALL"||d.mes==filtroMes.value) &&
+  (filtroSemana.value==="ALL"||d.semana==filtroSemana.value)
  );
  renderKPIs(f);renderTabela(f);renderGraficos(f);
 }
@@ -372,7 +407,19 @@ function renderGraficos(f){
    fill:true,
    backgroundColor:"rgba(34,197,94,.18)"
   }]},
-  options:{responsive:true,maintainAspectRatio:false,plugins:{legend:{display:false}}}
+  options:{
+   responsive:true,
+   maintainAspectRatio:false,
+   plugins:{
+    legend:{display:false},
+    tooltip:{
+     callbacks:{
+      beforeLabel:(ctx)=>`Pontos do dia: ${diario[ctx.dataIndex]}`,
+      label:(ctx)=>`Acumulado: ${ctx.parsed.y}`
+     }
+    }
+   }
+  }
  });
 
  chartBar=new Chart(chartBarEl,{
@@ -386,7 +433,11 @@ function renderGraficos(f){
    backgroundColor:["#22c55e","#ef4444","#facc15"],
    borderRadius:12
   }]},
-  options:{responsive:true,maintainAspectRatio:false,plugins:{legend:{display:false}}}
+  options:{
+   responsive:true,
+   maintainAspectRatio:false,
+   plugins:{legend:{display:false}}
+  }
  });
 }
 
